# Egg_Events_Prediction_ML

./: .gitignore  README.md  pyproject.toml
src/: feature_extraction.py  ml.py  predict.py  vis.py
